--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "re2"]
 	path = re2
 	url = http://github.com/google/re2
+[submodule "libjit"]
+	path = libjit
+	url = git://git.savannah.gnu.org/libjit.git
